src/main/resources/static/css/styles.css
:root {
    --logoWidth: 50px;
    --fontSize30: 30px;
    --fontSize25: 25px;
    --fontSize20: 20px;
    --fontSize15: 15px;
    --gridTemplateColumns: auto auto;
    --black: #1d1815;
    --yellow: #f0dc00;
    --red: #db2519;
    --orange: #e6760e;
    --display: table-cell;
    --clubLogoWidth: 400px;
    --wallpaper: url(/wall2.jpg);
}


body {
    background-image: var(--wallpaper);
    background-attachment: fixed;
    background-size: cover;
}

.content {
    display: grid;
    grid-template-columns: var(--gridTemplateColumns);
    justify-items: center;
    margin-bottom: 40px;
}

#logo {
    width: var(--logoWidth);
}

#trophy {
    width: var(--logoWidth);
    float: right;
}

.fpLogo {
    padding: 5px;
}

.title1 {
    font-size: var(--fontSize25);
    vertical-align: top;
    font-style: italic;
}

.title2 {
    font-size: var(--fontSize30);
    vertical-align: bottom;
    font-style: italic;
    font-weight: bold;
}

.logos {
    display: flex;
    text-align: center; 
    padding: 0;
    justify-content: space-between;
}

.logos a, .logos p {
    text-decoration: none;
    text-align: center;
    font-size: var(--fontSize15);
}

a:link, a:visited {
    color: white;
}

.logos li {
    list-style: none;
    padding: 5px;
}

.logos img {
    max-height: 100px;
    max-width: 100px;
    min-height: 50%;
    min-width: 50%;
    width: 100%;
}

.pauza {
    display: none
}

.team p {
    text-align: left;
}

.form {
    background-color: rgba(255, 255, 255, 0.4);
}

.form td {
    font-weight: bold;
}

.form p {
    text-align: left;
}

.teamEdit {
    margin: 5px 10px 20px;
    padding: 10px 5px;
    display: flex;
}

.teamEdit p {
    text-align: left
}

.teamEdit a {
    margin: 5px;
    text-decoration: none;
    box-shadow: 0 0 5px black;
    padding: 5px;
}

.adminActions {
    display: flex;
    flex-direction: column;
    float: right;
    clear: both;
}

.deleteMday {
    padding: 5px;
    text-align: right;
    margin-bottom: 10px;
}

.save, .save:visited, save:link {
    padding: 5px;
    text-align: right;
    color: var(--yellow);
    margin-bottom: 8px;
}

.newsletter {
    padding: 5px;
    text-align: right;
    color: var(--orange);
}

.headerEdit {
    background-color: rgba(255, 255, 255, 0.4);    
}

.headerEdit a {
    text-decoration: none;
}

.headerEdit > span:first-of-type {
    font-size: var(--fontSize30);
    padding: 20px 0px;
}

.mDayInput p {
    display: inline-block;
    cursor: pointer;
    padding: 5px 10px;
    box-shadow: 0 0 5px black;
    margin: 5px 10px 20px;
}

.mDayInput a {
    margin: 0 0 0 5px;
    text-decoration: none;
}

#k5, #k6, #k7, #k8, #k9 {
    display: none;
    margin: 15px 10px 20px;
    padding: 5px;
}

.table {
    margin-left: 10px; 
}

.table table {
    background-color: rgba(255, 255, 255, 0.4);
    border-collapse: collapse;
}

.table th, .table td {
    text-align: center;
    border-bottom: 1px solid gray;
}

.table th {
    font-size: var(--fontSize15);
}

.table td {
    font-size: var(--fontSize20);
    padding: 3px 10px
}

.table th:nth-child(2), .table td:nth-of-type(2), .table td:nth-of-type(3) {
    text-align: left;
    padding-left: 5px;
}

.table tr:nth-of-type(1) {
    background-color: var(--orange);
}

.table tr:nth-of-type(n+2):nth-of-type(-n+5) td:nth-of-type(1) {
    background-color: var(--yellow);
}

.table td:nth-of-type(10), .table td:nth-of-type(2) {
    font-weight: bold;
}

.bulletin h1, .bulletin h2, .bulletin h3 {
    text-align: center;
}

.resultsNews table {
    font-size: var(--fontSize20);
    margin-bottom: 20px; 
    border-collapse: collapse;
}

.resultsNews tr td {
    padding: 0 5px;
}

.resultsNews p {
    font-size: var(--fontSize20);
    font-weight: bold;
}

.news {
    font-size: var(--fontSize20);
}

.resultsNews td:nth-of-type(n+2):nth-of-type(-n+4) {
    padding: 0 2px;
}

.resultsNews td:first-of-type {
    padding-right: 20px;
}

.resultsNews td:last-of-type {
    padding-left: 20px;
}

.fixtureNews{
    margin-bottom: 100px;
    padding: 0 5px 0 0;
    font-size: var(--fontSize20);
}

.fixtureNews td:nth-of-type(2) {
    padding: 0 10px
}

.fixtureNews td:nth-of-type(4) {
    padding-left: 50px;
    font-style: italic;
}

.results table {
    font-size: var(--fontSize20);
    margin-bottom: 20px; 
    border-collapse: collapse;
    background-color:  rgba(255, 255, 255, 0.4);
}

.results tr td {
    border-bottom: 1px solid black;
    padding: 3px 5px;
}

.results td:first-of-type {
    text-align: right;
    padding-right: 10px;
}

.results td:last-of-type {
    text-align: left;
    padding-left: 10px;
}

.results td:nth-of-type(n+2):nth-of-type(-n+4) {
    background-color: var(--yellow);
    font-weight: bold;
    padding: 0 3px;
}

.results p {
    text-align: left;
}

.results p.results {
    text-decoration: underline;
    font-size:  var(--fontSize25);
}

.teamResults table td:nth-of-type(2) {
    text-align: right;
    padding: 0 5px;
}

.team table {
    background-color: rgba(255, 255, 255, 0.4);
    border-collapse: collapse;
}

.team td {
    border: 1px solid black;
    padding: 1px 2px;
}

.teamResults table td:nth-of-type(6) {
    text-align: left;
    padding: 0 5px;
}

.teamResults table td:nth-of-type(n+3):nth-of-type(-n+5) {
    font-weight: bold;
}

.teamResults table td:nth-of-type(1) {
    border-right: 1px dotted black;
}

.fixtures {
    margin: 10px;
    padding: 5px;
    font-size: var(--fontSize20);
}

.fixtures td:nth-child(1) {
    text-align: right;
    padding-right: 10px;
}

.fixtures td:nth-child(2) {
    text-align: left;
    padding-left: 10px
}

.fixture table {
    border-collapse: collapse;
    margin-bottom: 10px;
    background-color:  rgba(255, 255, 255, 0.4);
}

.fixture td {
    padding-right: 15px;
    padding-bottom: 5px;
    border-bottom: 1px solid black;
    font-size: var(--fontSize20);
}

.fixture a {
    font-size: var(--fontSize20);
    margin: 0 25px 0 0; 
}

.fixture p {
    font-size: var(--fontSize20);
}

.footer {
    clear: both;
    margin-top: 100px;
    text-align: center;
    background-color: rgba(255, 255, 255, 0.4);
}

.footer p {
    font-size: var(--fontSize15);
}

.display {
    display: var(--display);
}

.teamLogo {
    float: right;
    max-width: var(--clubLogoWidth);
    width: 100%;

}


@media screen and (max-width: 768px) {
    :root {
        --logoWidth: 20px;
        --fontSize30: 20px;
        --fontSize25: 15px;
        --fontSize20: 12px;
        --fontSize15: 10px;
        --gridTemplateColumns: auto;
        --display: none;
        --clubLogoWidth: 100px;
    }

    #trophy {
        display: none;
    }

}

